--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
         <nav class="nav-head">
             <h2 class="logo">GlassM5
             </h2>
-            <ul>
+            <ul class="active">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Service</a></li>
                 <li><a href="#">Contacts</a></li>
             </ul>
             <button class="btn-nav"> Get Started</button>
+            <div class="bars"><i class="fa fa-bars" aria-hidden="true"></i></div>
         </nav>
         <div class="mene-content">
            
