--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" media="screen and (max-width: 768px)" href="mobile.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+
     <title>Glassm5</title>
 </head>
 <body>
@@ -194,7 +196,7 @@
                     <input type="text" name="" id="input4" placeholder="Phone"></div>
             
                 <br>
-                <textarea name="" id="text" cols="116" rows="18">Message</textarea>
+                <textarea name="" id="text" cols="85" rows="18">Message</textarea>
                 <button class="me-btn"> Send your message</button>
              
                     </div>
